[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dot-zero-model"
version = "0.1.0"
description = "DotZero neural network and MCTS search"
requires-python = ">=3.12"
dependencies = [
    "dot-zero-game @ git+https://github.com/MWENSR-Final-Year-Project/dot-zero-game.git",
    "tensorflow>=2.16",
    "numpy>=1.26.0,<2.2.0",
]

[project.optional-dependencies]
dev = [
    "coverage==7.13.5",
    "isort==8.0.1",
    "pylint==4.0.5",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]